# vECU_demo

./: .gitignore  ASW_ABS.slx  CMakeLists.txt  README.md  SpeedController.slx  VehicleSpeedModel.slx  generate_vs_solution.bat  generate_vs_solution.ps1  generate_vs_solution_advanced.bat  test_communication.bat
SpeedController_ert_rtw/: CMakeLists.txt  SilKitConfig.json  SpeedController.c  SpeedController.h  SpeedController_private.h  SpeedController_types.h  codedescriptor.dmr  rtw_proj.tmw  rtwtypes.h  vECU_Main.cpp
SpeedController_ert_rtw/tmwinternal/: simulink_cache.xml  tr
VehicleSpeedModel_grt_rtw/: VehicleSpeedModel.c  VehicleSpeedModel.h  VehicleSpeedModel_data.c  VehicleSpeedModel_private.h  VehicleSpeedModel_types.h  builtin_typeid_types.h  codedescriptor.dmr  multiword_types.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  vECU_PlantModel.cpp
VehicleSpeedModel_grt_rtw/tmwinternal/: simulink_cache.xml
sil-kit/docs/configuration/: includes-configuration.rst
